formatted names field

--- a/public/app.css
+++ b/public/app.css
@@ -1,9 +1,5 @@
 body {
     background-color: #1b1d36;
-}
-
-.text {
-    text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
@@ -16,15 +12,25 @@ body {
 }
 
 input[type="text"],
-input[type="text"]:focus   
+input[type="text"]:focus,
+input::placeholder
 {
     background: transparent;
     border: none;
     outline-width: 0;
+    color: #fca6d1;
+    font-weight: bold;
+    font-size: 1em;
+    width: 700px;
+}
+
+input:focus::placeholder {
+    color: transparent;
 }
 
 h2 {
     color: #99d6ea;
+    text-align: center;
 }
 
 .grid {
